css fixed on scrollbar horizontal

--- a/app/assets/stylesheets/video/main_index.scss
+++ b/app/assets/stylesheets/video/main_index.scss
@@ -49,10 +49,37 @@ display: flex;
     border-top: 1px solid #e5e5e5;
     justify-content: flex-start;
     align-items: center;
-    overflow: auto;
+    overflow: overlay;
     white-space: nowrap;
-    // height: 40px;
+    height: 45px;
     background: white;
+}
+
+.video-tags-show::-webkit-scrollbar{
+    width: 5px;
+    height: 3px;
+}
+
+// .video-tags-show::-webkit-scrollbar-track{
+//     -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,0.3);
+//     border: 1px solid black;
+//     background: rgb(41,41,41);
+//     border-radius: 10px;
+// }
+.video-tags-show::-webkit-scrollbar-thumb {
+    /* border-radius: 10px; */
+    // height: 30px;
+    /* width: 8px; */
+    /* border: 1px solid black; */
+    background: #5f5f5f;
+    -webkit-box-shadow: 0 1px 1px black;
+    /* background: -webkit-linear-gradient(#c8c8c8, #969696); */
+}
+
+.video-tags-show::-webkit-scrollbar-track-piece {
+    height: 30px;
+    width: 30px;
+    margin-left: 60px;
 }
 
 .tag {
